--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,29 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
+    "@pinia/nuxt": "^0.11.3",
+    "@vueuse/core": "^14.0.0",
+    "date-fns": "^4.1.0",
     "nuxt": "^4.2.0",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
+  },
+  "devDependencies": {
+    "@nuxt/test-utils": "^3.20.1",
+    "@nuxtjs/tailwindcss": "^6.14.0",
+    "@vitest/ui": "^3.2.4",
+    "@vue/test-utils": "^2.4.6",
+    "autoprefixer": "^10.4.21",
+    "happy-dom": "^20.0.10",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
+    "vitest": "^3.2.4"
   }
 }
