--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,11 +27,7 @@ services:
     networks:
       - mealprep-network
     command: >
-      sh -c "composer install --no-interaction &&
-             php -r \"file_exists('.env') || copy('.env.example', '.env');\" &&
-             php artisan key:generate --force &&
-             php artisan migrate --force &&
-             php artisan serve --host=0.0.0.0 --port=8000"
+      sh -c "php artisan serve --host=0.0.0.0 --port=8000"
 
   # Nuxt Frontend
   frontend:
